@@ -5,6 +5,7 @@ Developers
 Translators
 -----------
 * Isratine Citizen (he)
+* Elbert Pol (nl)
 
 Icons
 -----
